Fixed issue of center list not fitting onscreen for smaller screen sizes

--- a/html/style.css
+++ b/html/style.css
@@ -432,7 +432,6 @@ button[type="submit"]:hover {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
   text-align: center;
 }
 
